# free-tube-music

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: config.css  config.html  config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: config-page.toml  show-config.toml
src-tauri/src/: commands.rs  config_store.rs  cookies.rs  gear_overlay.rs  lib.rs  main.rs  secrets.rs
src-tauri/src/router/: config.rs  mod.rs
