[package]
name = "freetubemusic"
version = "0.1.1"
description = "Tauri wrapper for YouTube Music with optional SOCKS5 support"
authors = ["Anton Mitsengendler"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "freetubemusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["full"] }
url = "2"
log = "0.4"
tauri-plugin-log = "2"
tokio-socks = "0.5.3"
keyring = { version = "4.1.5", features = ["windows-native-keyring-store"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

